# Embedded

CMakeDocker/: CMakeLists.txt  Dockerfile
MakefileDocker/: Dockerfile  Makefile
PythonDocker/: Dockerfile
assignment1/cmakeapp/: CMake.dockerfile  CMakeLists.txt  instructions.txt
assignment1/makefileapp/: Makefile.dockerfile  instructions.txt
assignment1/pythonapp/: Python.dockerfile  instructions.txt
assignment2/: CMakeLists.txt  instructions.txt
final_project/: CMakeLists.txt  ReadMe  subscriber.c
final_project/headers/: font.h  main_blink.h
final_project/sources/: font.c  main_blink.c  morse.c
final_project_jacob/: CMakeLists.txt  CMakeListstestoled.txt
final_project_jacob/headers/: bmp280_i2c.h  oled_txt.h  ssd1306.h
final_project_jacob/libs/install_cv1800b_cjson/lib/: libcjson.so.1.7.17
final_project_jacob/libs/install_cv1800b_mqtt/lib/: libmosquitto.so.1  libmosquittopp.so.2.0.18
final_project_jacob/libs/install_cv1800b_mqtt/sbin/: mosquitto
final_project_jacob/libs/install_cv1800b_openssl/lib/: libcrypto.so.1.1
final_project_jacob/sources/: main.c  oled_txt.c  publisher.c  subscriber.c
gitTest/: test.c
project1.1/: ReadMe  blink.c  instructions.html  instructions.md
